feat: 增加 mybatis 和 mysql

--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <!-- 添加WEB开发能力 -->
     <dependencies>
 
+        <!-- 添加WEB开发能力 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -47,6 +47,21 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.6.1</version>
         </dependency>
+
+        <!--        mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+        <!--        mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
+
 
     </dependencies>
 
