--- a/personal-service/src/main/resources/application.yml
+++ b/personal-service/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8000
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/personal_service?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
